# simweave

./: .gitignore  CURRENCY_DESIGN.md  EdgeWeave.md  MANIFEST.in  PACKAGING.md  README.md  SIMENG_API.md  SIMWEAVE_API.md  SWEEP_DESIGN.md  VIZ_DESIGN.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
archive/: 00-osmnx-features-demo.ipynb  dynamic_sys2.py  dynamic_systems.py  infix_example.py  numerical_diff.py  priorityQueueIdea.py  pyside_plot_example.py  stu_osmnx.ipynb  test_ds2.py  test_dynamic.py
archive/legacy_dynamics/: README.md
claude_skill/: SKILL.md
demos/: 01_simple_queue.py  02_chained_services.py  03_resource_pool.py  04_supply_chain_basic.py  05_supply_chain_optimise.py  06_agent_astar.py  07_monte_carlo.py  08_hybrid_continuous_discrete.py  09_mass_spring_damper.py  10_quarter_car.py  11_series_rlc.py  12_thermal_system.py  13_money_cashflow.py  14_viz_tour.py  15_units_dimensional.py  16_inventory_optimisation.py  17_half_car.py  17_half_car_pitch.py  18_half_car_roll.py  18_roll_car_model.py  19_full_car_dynamics.py  20_PID_thermal_system.py  21_reliable_fleet.py  22_sensitivity_analysis.py  23_time_axis_calendar.py  24_signalised_intersection.py  25_roundabout.py  26_fault_injection.py  _bootstrap.py
discrete/examples/: sim_explore.py
discrete/simeng/: agents.py  road_infrastructure.py
docs/: api.md  concepts.md  index.md  install.md  quickstart.md
docs/blog/: agent-based-sim.md  des-vs-simpy.md  index.md  predictive-maintenance.md  road-traffic.md  suspension-dynamics.md
docs/design/: api-surface.md  currency.md  edgeweave.md  index.md  packaging.md  sweeps.md  viz.md
docs/embeds/: agent_path.html  full_car_metrics.html  mc_fan.html  msd_phase.html  msd_states.html  queue_length.html  service_util.html  warehouse_stock.html
docs/modules/: agents.md  (+12 more)
scripts/: gen_embeds.py
simeng/: deletethis.py  qsim_engine.py  supply_chain.py
tests/: conftest.py  test_agents_routing.py  test_constants.py  test_continuous_solver.py  test_core_clock.py  test_core_environment.py  test_core_scheduler.py  test_currency.py  test_discrete_queue.py  test_discrete_resources.py  test_discrete_service.py  test_faults.py  test_integration_littles_law.py  test_mc_runner.py  test_reliability.py  test_roads.py  test_supplychain_optimization.py  test_supplychain_warehouse.py  test_time_axis.py  test_units.py  test_viz.py  utils.py
(+130 files in other folders)
