[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simweave"
version = "0.2.0"
description = "SimWeave: a hybrid discrete/continuous simulation engine with currency, units, agents, supply chains, and Monte Carlo."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stuart" }]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
optim = ["scipy>=1.10"]
plot = ["matplotlib>=3.7"]
viz = ["plotly>=5.18"]
graph = ["networkx>=3.0"]
geo = ["osmnx>=1.8", "networkx>=3.0"]
fast = ["numba>=0.58"]
intl = ["babel>=2.14"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "scipy>=1.10",
    "networkx>=3.0",
    "babel>=2.14",
    "plotly>=5.18",
]
all = [
    "scipy>=1.10",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "networkx>=3.0",
    "numba>=0.58",
    "babel>=2.14",
]

[tool.setuptools]
# Keep the wheel lean: only Python sources under src/simweave go in.
# README/LICENSE/pyproject are included automatically as distribution metadata.
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# If we ever need to ship data files inside the package, list them here
# explicitly. Leaving empty keeps the wheel to *.py only.
simweave = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"